--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,8 @@
         "multer": "^1.4.5-lts.1",
         "pg": "^8.11.3",
         "redis": "^4.6.11",
-        "zod": "^3.22.4"
+        "zod": "^3.22.4",
+        "typescript": "^5.3.3"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
@@ -43,7 +44,6 @@
         "@types/multer": "^1.4.11",
         "@types/node": "^20.10.5",
         "jest": "^29.7.0",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^5.3.3"
+        "ts-node-dev": "^2.0.0"
     }
 }
